--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Tìm nhanh Q&A — Demo</title>
+  <title>Tìm đáp án thi CNTT</title>
 
   <!-- Fuse.js -->
   <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.6.2/dist/fuse.min.js"></script>
@@ -20,8 +20,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>Tìm nhanh Q&A</h1>
-    <p>Gõ từ khóa để tìm câu hỏi–đáp án (dùng Fuse.js fuzzy search).</p>
+    <h1>Tìm nhanh đáp án thi CNTT</h1>
+    <p>Gõ từ khóa để tìm câu hỏi–đáp án (Hải Đăng Khoa Binh chủng).</p>
 
     <input id="search" type="text" placeholder="Nhập từ khóa..." autofocus />
     <div id="count" class="meta" style="margin-top:8px">0 kết quả</div>
@@ -101,3 +101,4 @@ input.addEventListener('input', ()=>{
 
 </body>
 </html>
+
