--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>Tìm nhanh Q&A</h1>
-    <p>Gõ từ khóa để tìm câu hỏi–đáp án (Fuse.js fuzzy search).</p>
+    <h1> Đá án CNTT- Trần Hải Đăng - Khoa Binh chủng</h1>
+    <p>Gõ từ khóa để tìm câu hỏi–đáp án.</p>
 
     <div class="search-wrap">
       <input id="search" type="text" placeholder="Nhập từ khóa..." autofocus />
@@ -147,3 +147,4 @@ clearBtn.addEventListener('click', ()=>{
 
 </body>
 </html>
+
