--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 </head>
 <body>
   <div class="container">
-    <h1> Đá án CNTT- Trần Hải Đăng - Khoa Binh chủng</h1>
+    <h1>Đáp án CNTT</h1>
+    <p><h2>Trần Hải Đăng - Khoa Binh chủng</h2></p>
     <p>Gõ từ khóa để tìm câu hỏi–đáp án.</p>
 
     <div class="search-wrap">
@@ -147,4 +148,5 @@ clearBtn.addEventListener('click', ()=>{
 
 </body>
 </html>
+
 
