--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <body>
   <div class="container">
     <h1>Đáp án CNTT</h1>
-    <p><h2>Trần Hải Đăng - Khoa Binh chủng</h2></p>
+    <p><h3>Trần Hải Đăng - KBC TQS</h3></p>
     <p>Gõ từ khóa để tìm câu hỏi–đáp án.</p>
 
     <div class="search-wrap">
@@ -148,5 +148,6 @@ clearBtn.addEventListener('click', ()=>{
 
 </body>
 </html>
+
 
 
